--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -2,7 +2,7 @@
 TODO... the theorem demonstration here...
 
 
-\chapter{Code?}
-TODO:...
-At least the Ceres cost function... (or maybe I can put it in Implementation details)
+% \chapter{Code?}
+% TODO:...
+% At least the Ceres cost function... (or maybe I can put it in Implementation details)
 
