--- a/tex/header.tex
+++ b/tex/header.tex
@@ -18,8 +18,8 @@ Pablo Speciale\\
 \vspace{1cm}
 
 \includegraphics[height=0.20\textheight]{images/WG_logo_on_white.jpg}
-\raisebox{1em}{
-  \includegraphics[height=0.16\textheight]{images/universite-bourgogne.pdf}
+\raisebox{3ex}{
+  \includegraphics[height=0.15\textheight]{images/universite-bourgogne.pdf}
 }
 }
 \end{center}
