--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -25,6 +25,13 @@ Why Ceres?
 
 
 
+\subsection{Per view optimization}
+
+In order to test the system before going to the complete optimization (optimizing the parameters with data in all views), a ``local'' per view optimization (only one checkerboard sample) was performed to see if the process was going in the right path. This previous stage before using all the data was important to find errors.
+
+TODO... Move to implementation chapter!!
+
+
 \section{Code}
 \subsection{Cost function}
 \label{sec:ceres_impl}
